# llm

./: .gitignore  pyproject.toml  readme.md
llm/: __init__.py  db_init.py
llm/lib/: remote_ollama.py  supabase.py  types.py  url.py  utils.py
llm/preprocessing/: chunking.py  embedding.py
llm/provider/: __init__.py  google.py  ollama.py  openai.py  openrouter.py
llm/provider/base/: dspy_lm_base.py  embedding_model.py
llm/retrieval/: dense.py  hybrid.py  sparse.py  text_search.py  vector_similarity.py
llm/retrieval/vector_similarity/: __init__.py
llm/retrieval/vector_similarity/db/: chunks.py
