[project]
name = "llm"
version = "0.3.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "dspy>=3.1.2",
    "google-genai>=1.60.0",
    "langchain-text-splitters>=1.1.1",
    "pgvector>=0.4.2",
    "pip>=26.0.1",
    "pypdf>=6.6.0",
    "sqlalchemy>=2.0.46",
    "supabase>=2.27.2",
]
